--- a/public/productos.html
+++ b/public/productos.html
@@ -10,6 +10,7 @@
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js"></script>
 </head>
 <body>
     <!-- Header -->
@@ -70,70 +71,6 @@
                     </button>
                 </div>
             </div>
-                        <!-- Producto 3 -->
-            <div class="producto-card">
-                <div class="producto-imagen">
-                    <img src="img/impresora1.webp" alt="Impresora Térmica EPSON TM-T20III">
-                </div>
-                <div class="producto-info">
-                    <h3>Impresora Térmica EPSON TM-T20III</h3>
-                    <div class="precio">$150.00</div>
-                    <button class="add-to-cart" 
-                            data-id="prod001"
-                            data-name="Impresora EPSON TM-T20III"
-                            data-price="150.00">
-                        <i class="fas fa-cart-plus"></i> Añadir al carrito
-                    </button>
-                </div>
-            </div>
-                <!-- Producto 4 -->
-            <div class="producto-card">
-                <div class="producto-imagen">
-                    <img src="img/impresora1.webp" alt="Impresora Térmica EPSON TM-T20III">
-                </div>
-                <div class="producto-info">
-                    <h3>Impresora Térmica EPSON TM-T20III</h3>
-                    <div class="precio">$150.00</div>
-                    <button class="add-to-cart" 
-                            data-id="prod001"
-                            data-name="Impresora EPSON TM-T20III"
-                            data-price="150.00">
-                        <i class="fas fa-cart-plus"></i> Añadir al carrito
-                    </button>
-                </div>
-            </div>
-                <!-- Producto 5 -->
-            <div class="producto-card">
-                <div class="producto-imagen">
-                    <img src="img/impresora1.webp" alt="Impresora Térmica EPSON TM-T20III">
-                </div>
-                <div class="producto-info">
-                    <h3>Impresora Térmica EPSON TM-T20III</h3>
-                    <div class="precio">$150.00</div>
-                    <button class="add-to-cart" 
-                            data-id="prod001"
-                            data-name="Impresora EPSON TM-T20III"
-                            data-price="150.00">
-                        <i class="fas fa-cart-plus"></i> Añadir al carrito
-                    </button>
-                </div>
-            </div>
-                <!-- Producto 6 -->
-            <div class="producto-card">
-                <div class="producto-imagen">
-                    <img src="img/impresora1.webp" alt="Impresora Térmica EPSON TM-T20III">
-                </div>
-                <div class="producto-info">
-                    <h3>Impresora Térmica EPSON TM-T20III</h3>
-                    <div class="precio">$150.00</div>
-                    <button class="add-to-cart" 
-                            data-id="prod001"
-                            data-name="Impresora EPSON TM-T20III"
-                            data-price="150.00">
-                        <i class="fas fa-cart-plus"></i> Añadir al carrito
-                    </button>
-                </div>
-            </div>
             
             <!-- Más productos... -->
         </div>
@@ -145,7 +82,6 @@
             <span class="close-modal">&times;</span>
             <h2><i class="fas fa-shopping-cart"></i> Tu Carrito</h2>
             <div id="cartItems">
-                <!-- Los productos del carrito aparecerán aquí dinámicamente -->
                 <div class="empty-cart">
                     <i class="fas fa-shopping-cart"></i>
                     <p>Tu carrito está vacío</p>
@@ -154,12 +90,12 @@
             <div class="cart-total">
                 Total: $<span id="cartTotal">0.00</span>
             </div>
-            <button class="checkout-btn"><i class="fas fa-credit-card"></i> Proceder al Pago</button>
+            <button class="checkout-btn" id="checkoutBtn"><i class="fas fa-credit-card"></i> Proceder al Pago</button>
         </div>
     </div>
 
     <!-- JavaScript -->
-    <script src="js/firebase.js"></script>
+    <script src="js/firebase-config.js"></script> <!-- Configuración de Firebase -->
     <script src="js/app.js"></script>
 </body>
 </html>
