--- a/public/productos.html
+++ b/public/productos.html
@@ -3,15 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impresoras Térmicas - Productos</title>
+    <title>Productos - Impresoras Térmicas</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js"></script>
 </head>
 <body>
-    <!-- Header -->
     <header>
         <div class="container header-container">
             <div class="logo">
@@ -31,7 +27,6 @@
         </div>
     </header>
 
-    <!-- Contenido Principal -->
     <main class="container">
         <h1><i class="fas fa-print"></i> Nuestras Impresoras</h1>
         
@@ -69,8 +64,6 @@
                     </button>
                 </div>
             </div>
-            
-            <!-- Más productos... -->
         </div>
     </main>
 
@@ -88,12 +81,16 @@
             <div class="cart-total">
                 Total: $<span id="cartTotal">0.00</span>
             </div>
-            <button class="checkout-btn" id="checkoutBtn"><i class="fas fa-credit-card"></i> Proceder al Pago</button>
+            <button class="checkout-btn" id="checkoutBtn">
+                <i class="fas fa-credit-card"></i> Proceder al Pago
+            </button>
         </div>
     </div>
 
-    <!-- JavaScript -->
-    <script src="js/firebase-config.js"></script>
+    <!-- Firebase + Aplicación -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
