--- a/public/index.html
+++ b/public/index.html
@@ -714,7 +714,29 @@
       </div>
     </div>
   </footer>
-
+<!-- Modal de Login -->
+<div id="login-modal" class="modal-overlay">
+  <div class="login-modal">
+    <div class="modal-header">
+      <h2>Iniciar Sesión</h2>
+      <button class="close-modal">&times;</button>
+    </div>
+    <form id="login-form" class="login-form">
+      <div class="form-group">
+        <label for="email">Correo Electrónico</label>
+        <input type="email" id="login-email" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Contraseña</label>
+        <input type="password" id="login-password" required>
+      </div>
+      <button type="submit">Ingresar</button>
+      <div class="form-footer">
+        ¿No tienes cuenta? <a href="#" id="switch-to-signup">Regístrate aquí</a>
+      </div>
+    </form>
+  </div>
+</div>
   <script>
     // Carrusel automático mejorado
     document.addEventListener('DOMContentLoaded', function() {
