--- a/public/index.html
+++ b/public/index.html
@@ -779,6 +779,8 @@
 
   <!-- Scripts al final del body -->
   <script type="module" src="/js/main.js"></script>
+  <script type="module" src="/js/auth.js"></script>
+
 </body>
 </html>
 
