--- a/public/index.html
+++ b/public/index.html
@@ -713,29 +713,42 @@
   </footer>
 
   <!-- Modal de Login -->
-  <div id="login-modal" class="modal-overlay">
-    <div class="login-modal">
-      <div class="modal-header">
-        <h2>Iniciar Sesión</h2>
-        <button class="close-modal">&times;</button>
-      </div>
-      <form id="login-form" class="login-form">
-        <div class="form-group">
-          <label for="email">Correo Electrónico</label>
-          <input type="email" id="login-email" required>
-        </div>
-        <div class="form-group">
-          <label for="password">Contraseña</label>
-          <input type="password" id="login-password" required>
-        </div>
-        <button type="submit">Ingresar</button>
-        <div class="form-footer">
-          ¿No tienes cuenta? <a href="#" id="switch-to-signup"><li><a href="registro.html"><</i> Regístrate aquí</a></li>
-        </div>
-      </form>
+<div id="login-modal" class="modal-overlay">
+  <div class="login-modal" role="dialog" aria-modal="true" aria-labelledby="login-modal-title">
+    <div class="modal-header">
+      <h2 id="login-modal-title">Iniciar Sesión</h2>
+      <button class="close-modal" aria-label="Cerrar modal de inicio de sesión">&times;</button>
     </div>
+    <form id="login-form" class="login-form">
+      <div class="form-group">
+        <label for="login-email">Correo Electrónico</label>
+        <input 
+          type="email" 
+          id="login-email" 
+          required
+          autocomplete="email"
+          placeholder="tucorreo@ejemplo.com"
+        >
+      </div>
+      <div class="form-group">
+        <label for="login-password">Contraseña</label>
+        <input 
+          type="password" 
+          id="login-password" 
+          required
+          autocomplete="current-password"
+          placeholder="••••••••"
+          minlength="8"
+        >
+        <a href="#" class="forgot-password">¿Olvidaste tu contraseña?</a>
+      </div>
+      <button type="submit" class="btn-login">Ingresar</button>
+      <div class="form-footer">
+        <p>¿No tienes cuenta? <a href="registro.html" id="switch-to-signup" class="register-link">Regístrate aquí</a></p>
+      </div>
+    </form>
   </div>
-
+</div>
   <!-- Scripts -->
   <script>
     // Carrusel automático
