--- a/public/registro.html
+++ b/public/registro.html
@@ -244,7 +244,7 @@
         </form>
         
         <div class="login-link">
-            ¿Ya tienes una cuenta? <a href="#">Inicia sesión</a>
+            ¿Ya tienes una cuenta? <a href="index.html">Inicia sesión</a>
         </div>
     </div>
 
