--- a/public/registro.html
+++ b/public/registro.html
@@ -290,15 +290,14 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
     <script>
-        // Configuración de Firebase (reemplaza con tus datos)
         const firebaseConfig = {
-            apiKey: "TU_API_KEY",
-            authDomain: "TU_PROYECTO.firebaseapp.com",
-            databaseURL: "https://TU_PROYECTO.firebaseio.com",
-            projectId: "TU_PROYECTO",
-            storageBucket: "TU_PROYECTO.appspot.com",
-            messagingSenderId: "TU_SENDER_ID",
-            appId: "TU_APP_ID"
+          apiKey: "AIzaSyCR-axayENUg4FFb4jj0uVW2BnfwQ5EiXY",
+          authDomain: "mitienda-c2609.firebaseapp.com",
+          projectId: "mitienda-c2609",
+          storageBucket: "mitienda-c2609.appspot.com", // ¡Corregido! (quita .storage)
+          messagingSenderId: "536746062790",
+          appId: "1:536746062790:web:6e545efbc8f037e36538c7",
+          databaseURL: "https://mitienda-c2609.firebaseio.com" // Añade esto
         };
 
         // Inicializa Firebase
